mon second commit sur nouvelle branche "dev"
Signed-off-by: Tom Garnier <tomdesign-fr@gmail.com>

--- a/hello.html
+++ b/hello.html
@@ -51,6 +51,10 @@
         .logo{
             width:20rem;
         }
+        code{
+            padding: .3rem .9rem .4rem;
+            border: 1px solid #f1f1f1;
+        }
     </style>
     <body>
         <div align="center">
@@ -58,9 +62,10 @@
                 <img src="https://github.githubassets.com/images/modules/logos_page/Octocat.png" class="logo">
                 <h1>Hello World!</h1>
                 <p>Ceci est un test Git</p>
+                <code>mon second commit !</code>
             </header>
             <main>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Repellendus a accusamus iusto numquam tempore error quaerat tempora totam ipsam atque debitis in porro dolorem iste expedita, at incidunt deserunt nobis!</main>
-            <footer>Realized by TomDesign</footer>
+            <footer>Réalisation TomDesign</footer>
         </div>
     </body>
 </html>
